--- a/proof-of-decryption/.vscode/settings.json
+++ b/proof-of-decryption/.vscode/settings.json
@@ -4,6 +4,9 @@
         "falcon.h": "c",
         "lazer.h": "c",
         "vdec_ct_62bits.h": "c",
-        "vdec_ct_60bits.h": "c"
+        "vdec_ct_60bits.h": "c",
+        "vdec_params.h": "c",
+        "vdec_ct_40bits.h": "c",
+        "vdec_ct_gbfv_60bits_small.h": "c"
     }
 }
